--- a/index.html
+++ b/index.html
@@ -56,9 +56,12 @@
     </main>
     <footer>
         <h3 class="footer-title">By Facundo Menon Martinez</h3>
-        <a href="https://github.com/FacuMenonMartinez">Github</a>
-        <a href="https://www.linkedin.com/in/facundo-menon-martinez-870947258/">Linkedin</a>
-        <a href="https://es.fiverr.com/facundomenonm">Fiverr</a>
+        <div class="footer-links">
+            <a href="https://github.com/FacuMenonMartinez">Github</a>
+            <a href="https://www.linkedin.com/in/facundo-menon-martinez-870947258/">Linkedin</a>
+            <a href="https://es.fiverr.com/facundomenonm">Fiverr</a>
+        </div>
+
     </footer>
 
 </body>
